# oidcish

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile.tests  Makefile  README.md  clients-config.json  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini
notebooks/: SHAARPEC-credentials-with-devicecode.md
src/oidcish/: __init__.py  code.py  constants.py  crypt.py  device.py  flow.py  models.py  server.py  settings.py
src/oidcish/flows/: base.py  code.py  credentials.py  device.py
src/shaarpec/: auth.py  crypt.py  settings.py
tests/: common.py  test_authenticator.py  test_device.py  test_flow.py  test_flows_base.py  test_flows_credentials.py  test_flows_device.py
